<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">和牵挂</string>
    <string name="account">账号</string>
    <string name="pass">密码</string>
    <string name="code">验证码</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="perfecting_personal_data">完善个人资料</string>
    <string name="nickname">昵称</string>
    <string name="head_pic">头像</string>
    <string name="sex">性别</string>
    <string name="age">年龄</string>
    <string name="forget_password">忘记密码</string>
    <string name="remember_the_password">记住密码</string>
    <string name="bind_device">绑定设备</string>
    <string name="device_id">设备编号</string>
    <string name="name">姓名</string>
    <string name="phone_num">手机号</string>
    <string name="relation">关系</string>
    <string name="user_relation">用户关系</string>
    <string name="i_was_his">TA是我的</string>
    <string name="step">步</string>
    <string name="step_number">步数</string>
    <string name="heart_rate">心率</string>
    <string name="second">次/分</string>
    <string name="blood_pressure">血压</string>
    <string name="sleep">睡眠</string>
    <string name="minute">分</string>
    <string name="hour">小时</string>
    <string name="add_reminding">添加提醒</string>
    <string name="cycle">周期</string>
    <string name="reminding">只提醒一次</string>
    <string name="every_day">每天</string>
    <string name="weekly">周一至周五</string>
    <string name="custom">自定义</string>
    <string name="every_sunday">每周日</string>
    <string name="every_monday">每周一</string>
    <string name="every_tuesday">每周二</string>
    <string name="every_wednesday">每周三</string>
    <string name="every_thursday">每周四</string>
    <string name="every_friday">每周五</string>
    <string name="every_saturday">每周六</string>
    <string name="cancel">取消</string>
    <string name="my_device">我的设备</string>
    <string name="add_new_device">添加新设备</string>
    <string name="health_report">健康报表</string>
    <string name="reset_pwd">重置密码</string>
    <string name="feedback">意见反馈</string>
    <string name="about_us">关于我们</string>
    <string name="detele">删除</string>
    <string name="confirm_pwd">确认密码</string>
    <string name="installation_permit">安装许可证</string>
    <string name="common_problem">常见问题</string>
    <string name="contact_us">联系我们</string>
    <string name="set_alarm">闹钟设置</string>
    <string name="drug_remind">用药提醒</string>
    <string name="set_disturb">免打扰设置</string>
    <string name="set_safe_location">设置安全位置</string>
    <string name="safe_location">安全位置</string>
    <string name="safe_location_min">0</string>
    <string name="safe_location_max">2000</string>
    <string name="set_sms">短信设置</string>
    <string name="family_member">家庭成员</string>
    <string name="not_set">未设置</string>
    <string name="family_number">亲情号码/SOS</string>
    <string name="situational_mode">情景模式</string>
    <string name="measure_heart_rate">测心率/血压</string>
    <string name="fall_reminding">跌倒提醒</string>
    <string name="remote_shutdown">远程关机</string>
    <string name="del_device">删除设备</string>
    <string name="step_by_step">计步</string>
    <string name="heart_rate_and_blood_pressure">心率/血压</string>
    <string name="bmp">(bmp)</string>
    <string name="being_tested">正在检测</string>
    <string name="last_test_data">上次检测数据</string>
    <string name="hypertension_mmhg">高压/低压mmHg</string>
    <string name="normal_range">正常范围</string>
    <string name="hypertension">高压</string>
    <string name="hypotension">低压</string>
    <string name="mmhg">mmHg</string>
    <string name="testing">检测</string>
    <string name="font_type">微软雅黑</string>
    <string name="playback">回放</string>
    <string name="trajectory">轨迹</string>
    <string name="base_station">基站</string>
    <string name="no_track_data">未查询到轨迹</string>
    <string name="get_code">获取验证码</string>
    <string name="save">保存</string>
    <string name="skip">跳过</string>
    <string name="apply_binding_device">申请绑定设备</string>
    <string name="start_to_use">开始使用</string>
    <string name="re_binding">重新绑定</string>
    <string name="tel_book">电话本</string>
    <string name="camera_pop_default">相册</string>
    <string name="camera_pop_camera">拍照</string>
    <string name="home_page">首页</string>
    <string name="trend">趋势</string>
    <string name="location">定位</string>
    <string name="healthy">健康</string>
    <string name="my">我的</string>
    <string name="talk">微聊</string>
    <string name="conversation">通话</string>
    <string name="notice">通知</string>
    <string name="msg_notice">消息通知</string>
    <string name="book">电话本</string>
    <string name="to">至</string>
    <string name="time">时间</string>
    <string name="high_pressure">高压</string>
    <string name="low_pressure">低压</string>
    <string name="testing_record">监测记录</string>
    <string name="smartwatch">智能手表</string>
    <string name="position">定位器</string>
    <string name="remind_time">提醒时间</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="sos_set">SOS短信提醒</string>
    <string name="battery_set">低电量短信提醒</string>
    <string name="working_mode">工作模式</string>
    <string name="normal_mode">正常模式</string>
    <string name="following_pattern">跟随模式</string>
    <string name="power_saving_mode">省电模式</string>
    <string name="ring_bell">响铃</string>
    <string name="shock">震动</string>
    <string name="Mute">静音</string>
    <string name="ring_bell_and_shock">响铃＋震动</string>
    <string name="num1">号码1</string>
    <string name="num2">号码2</string>
    <string name="num3">号码3</string>
    <string name="select_family">选择家人</string>
    <string name="map_basic">基础地图</string>
    <string name="map_satellite">卫星地图</string>
    <string name="map_bus">公交地图</string>
    <string name="user_info">个人信息</string>
    <string name="login_out">退出登录</string>
    <string name="weight">体重</string>
    <string name="body_fat">体脂</string>
    <string name="body_fat_percentage">体脂率</string>
    <string name="impedance_data">阻抗数据</string>
    <string name="muscle">肌肉</string>
    <string name="bone_mass">骨量</string>
    <string name="water_content">水分</string>
    <string name="basal_metabolism">基础代谢</string>
    <string name="visceral_fat">内脏脂肪</string>
    <string name="protein">蛋白质</string>
    <string name="day">日</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="select_device_type">选择设备类型</string>
    <string name="catty">斤</string>
    <string name="body_score">身体得分</string>
    <string name="body_type">体型</string>
    <string name="standard">标准</string>
    <string name="low">偏低</string>
    <string name="high">偏高</string>
    <string name="not_up_to_standard">未达标</string>
    <string name="no_data">无数据</string>
    <string name="bmi_title">BMI=体重(kg)/身高(m)²</string>
    <string name="bmi_txt">BMI又称身体质量指数,在一定程度上可以反映人的胖瘦情况,适宜的BMI是保持健康和好身材的前提。</string>
    <string name="measuring_result">本次测量结果与</string>
    <string name="measuring_hint">平均的测量结果相差较大，是谁在使用秤呢？</string>
    <string name="devices_info">设备信息</string>
    <string name="devices_model">型号</string>
    <string name="software_version">软件版本</string>
    <string name="hardware_version">硬件版本</string>
    <string name="select_member">选择成员</string>
    <string name="add_together_use_scale">添加一起用称的人</string>
    <!-- 提示语 -->
    <string name="hint_input_account">请输入账号</string>
    <string name="hint_input_pwd">请输入登录密码</string>
    <string name="hint_input_get_code">请输入验证码</string>
    <string name="hint_input_password">输入8-16位数字加字母密码</string>
    <string name="hint_be_account">已有账号</string>
    <string name="hint_registered">已注册</string>
    <string name="hint_input_device_id">扫码或输入设备编号</string>
    <string name="hint_input_name">输入姓名</string>
    <string name="hint_relation">TA是我的</string>
    <string name="hint_put_urgent_name">输入紧急联系人姓名</string>
    <string name="hint_please_select">请选择</string>
    <string name="hint_not_reminding">未设置提醒</string>
    <string name="hint_input_relation">输入关系</string>
    <string name="hint_feedback">请描述您的意见或建议:</string>
    <string name="hint_add_pic">添加照片:</string>
    <string name="hint_testing">请确定手表贴近手腕，以保证检测数据准确</string>
    <string name="hint_select_sex">选择性别</string>
    <string name="hint_input_age">请输入年龄</string>
    <string name="hint_bind_success">设备绑定成功</string>
    <string name="hint_bind_fail">设备绑定失败</string>
    <string name="hint_sos">可设置3个号码，手表在紧急情况下按住SOS按键3秒后报警循环拨打3个号码。无人接听时，循环拨打两轮结束。</string>
    <string name="hint_start_time">请选择开始时间</string>
    <string name="hint_end_time">请选择结束时间</string>
    <!-- 弹出提示语 -->
    <string name="error_phone">用户名输入有误，请重新输入</string>
    <string name="error_code">短信验证码输入有误，请重新输入</string>
    <string name="code_overtime">验证码超时，请重新获取</string>
    <string name="error_register">验证码或者账号输入有误，请重新输入</string>

    <!-- 三级联动 -->
    <string name="pickerview_cancel">取消</string>
    <string name="pickerview_submit">完成</string>


    <string name="scanning_bind_device" tools:ignore="ExtraTranslation">扫描二维码绑定设备</string>
    <string name="scanning_bind">扫描二维码绑定设备</string>
    <string name="device_ime">设备iME:</string>
    <string name="unbind_device">解绑设备</string>
    <string name="people_list">成员列表</string>
    <string name="people_manger">成员管理</string>
    <string name="bind_unBind">绑定解绑</string>
    <string name="Hand_over_the_administrator_and_unbind_yourself">移交管理员</string>
    <string name="Hand_over_to_all_administrators">解除全部管理员</string>

    <string name="administrator">管理员</string>
    <string name="Members">成员</string>
    <string name="addMembers">添加成员</string>
    <string name="Body_fat_said">体脂秤</string>
    <string name="edName">请输入昵称</string>


</resources>
