<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
      
    <TextView
        android:id="@+id/unBindMe"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:text="@string/Hand_over_the_administrator_and_unbind_yourself"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="#242424"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#CDCDCD"
        ></View>
    <TextView
        android:id="@+id/unNow"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:text="@string/Hand_over_to_all_administrators"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="#242424"
        />
    
    <View
        android:layout_width="match_parent"
        android:background="#00000000"
        android:layout_height="10dp">


    </View>
    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FFF"
        android:text="@string/pickerview_cancel"
        android:textSize="15dp"
        android:gravity="center"
        android:textColor="#242424"
        />

</LinearLayout>
