<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="@string/testing"
        android:textColor="@color/txt_color"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/tv_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:text="@string/hint_testing"
        android:textColor="@color/hint_color"
        android:textSize="16dp" />

    <ImageView
        android:layout_width="177dp"
        android:layout_height="205dp"
        android:layout_below="@id/tv_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:src="@mipmap/img" />

    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="44dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/btn_gray_bord_shape"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/hint_color"
        android:textSize="17dp" />

</RelativeLayout>