<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/appWhite"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_camera_pop_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/txt_color"
            android:textSize="17dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/tv_camera_pop_camera"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/camera_pop_camera"
            android:textColor="@color/txt_color"
            android:textSize="17dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_color" />

        <TextView
            android:id="@+id/tv_camera_pop_default"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/camera_pop_default"
            android:textColor="@color/txt_color"
            android:textSize="17dp" />

    </LinearLayout>

</RelativeLayout>